<<<<<<< ChangeLog
Tues Aug 4 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSSplitView in initWithFrame changed default back color to light gray. 
	* NSSavePanel modified to inherit from NSPanel per OS spec. 

Sun Aug 2 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSText implemented setFont.
	* NSText fixed setUsesFontPanel.
	* NSText reformatted code again in certain places.

Sat Aug 1 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSText in setText modified to use ASSIGN macro.
	* NSText added draws_background ivar and implemented it's set method.
	* NSText reformatted code.

Weds July 29 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSMatrix.m in mouseDown adjusted the selection process when in List mode

Tue Jul 28 13:02:43 1998  Adam Fedor  <fedor@ultra.doc.com>

	* Source/NSSplitView.m: Implemention from Robert Vasvari
	<vrobi@ddrummer.com>. 
	* Headers/gnustep/gui/NSSplitView.h: Likewise.

Tues July 28 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSScroller.m in trackScrollButtons method added code to
 	highlight cell prior to calling trackMouse.  In keeping with new
 	behaviour of NSCell.

Sat July 25 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSCell.m removed highlight/unhighlight behaviour from trackMouse
 	method per OS spec.  Behaviour is now as described for this method
 	in NSControl, NSMatrix and NSCell.

	* NSMatrix.m: rewrote mouseDown to more closely follow the OS
 	spec.  There are still some very subtle differences.

	* NSButton.m: now highlights it's cell before invoking Cell's
 	trackMouse.

Mon Jul 20 10:37:22 1998  Adam Fedor  <fedor@ultra.doc.com>

	* config.h: Use NSDebugLog def from Foundation/NSObjCRuntime.h

Tues July 18 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* Source/NSBrowser.m fixed bug where column matrix was getting released
        twice in method _performLoadOfColumn.  
	* NSCell.m: isOpaque returns whether cell is bezeled per NS docs.